[package]
name = "friendly"
version = "0.2.0"
authors = ["Michael Ekstrand <md@ekstrandom.net>"]
edition = "2021"
description = "Human-friendly display library"
license = "MIT"
repository = "https://github.com/mdekstrand/friendly"

[dependencies]
num-traits = "0.2"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "1"
approx = "0.5"

[features]
# chrono = ["chrono"]
